--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       - POSTGRES_PASSWORD=159357
       - POSTGRES_DB=nocobase
     volumes:
-      db:/var/lib/postgresql/data
+      - db:/var/lib/postgresql/data
 
 volumes:
   db:
