--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
-DB_PASSWORD=159357
-DB_USER=nocobase
+POSTGRES_USER=nocobase
+POSTGRES_PASSWORD=159357
+POSTGRES_DB=nocobase
+DB_DATABASE=$POSTGRES_DB
+DB_PASSWORD=$POSTGRES_PASSWORD
+DB_USER=$POSTGRES_USER
 APP_KEY=your-secret-key
