--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,10 +19,7 @@ services:
   db:
     image: postgres
     restart: unless-stopped
-    environment:
-      - POSTGRES_USER=nocobase
-      - POSTGRES_PASSWORD=159357
-      - POSTGRES_DB=nocobase
+    env_file: .env
     ports:
       - '5432:5432'
     volumes:
