removed db container

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
-POSTGRES_USER=nocobase
-POSTGRES_PASSWORD=159357
-POSTGRES_DB=nocobase
-DB_DATABASE=$POSTGRES_DB
-DB_PASSWORD=$POSTGRES_PASSWORD
-DB_USER=$POSTGRES_USER
+DB_DATABASE=nocobase
+DB_PASSWORD=159357
+DB_USER=nocobase
 APP_KEY=your-secret-key
+DB_DIALECT=postgres
+DB_PORT=5432
+DB_HOST=host.docker.internal
+TZ=Asia/Phnom_Penh
+APP_ENV=production
