--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,6 @@ DB_USER=nocobase
 APP_KEY=your-secret-key
 DB_DIALECT=postgres
 DB_PORT=5432
-DB_HOST=host.docker.internal
+DB_HOST=172.17.0.1
 TZ=Asia/Phnom_Penh
 APP_ENV=production
