added postgres instruction

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
 DB_DATABASE=nocobase
 DB_PASSWORD=159357
-DB_USER=nocobase
-APP_KEY=your-secret-key
+DB_USER=postgres
 DB_DIALECT=postgres
 DB_PORT=5432
 DB_HOST=172.17.0.1
+# or host.docker.internal on window
+APP_KEY=your-secret-key
 TZ=Asia/Phnom_Penh
 APP_ENV=production
